# JunoIO

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
crates/jio/: Cargo.toml
crates/jio-fw/: Cargo.toml
crates/jio-fw/src/: lib.rs  math.rs  pid.rs
crates/jio-fw/src/model/: coords.rs  craft.rs  mod.rs  planet.rs
crates/jio-fw/src/plot/: channel.rs  group.rs  mod.rs  window.rs
crates/jio-fw/src/state/: executor.rs  mod.rs  script.rs  traits.rs
crates/jio/examples/: hover.rs
crates/jio/src/: client.rs  control.rs  error.rs  lib.rs  protocol.rs  state.rs  transport.rs  world.rs
documentation/: documentation.md  vizzy.md
junoio-python/: AGENTS.md  pyproject.toml
junoio-python/examples/: hello_display.py
junoio-python/examples/fsm/: timed_conditional_transition.py  timed_transition.py
junoio-python/examples/script/: conditional_wait.py  tick_loop_demo.py  timed_wait.py
junoio-python/src/juno_io.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
junoio-python/src/junoio/: __init__.py  api.py  cli.py  errors.py  models.py  runtime.py  transport.py  verification.py
junoio-unity-mod/: README.md
junoio-unity-mod/Assets/: JunoIO.asmdef  ModData.asset
junoio-unity-mod/Assets/Content/XML UI/: UIResourceDatabase.asset
junoio-unity-mod/Assets/ModTools/Assemblies/: ModApi.xml
junoio-unity-mod/Assets/ModTools/Parts/: Parts.xml
junoio-unity-mod/Assets/Scripts/: JunoIoBridge.cs  Mod.cs  ModDeploymentTools.cs  ModSettings.cs
junoio-unity-mod/ProjectSettings/: ProjectSettings.asset
(+7 files in other folders)
