[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "juno-io"
version = "0.1.0"
description = "Real-time flight-computer bridge between Juno: New Origins and Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
]

[project.scripts]
junoio = "junoio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
